major update add expenses form

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -85,7 +85,7 @@
 {% block javascripts %}
     <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="{{ asset('vendor/bootstrap/js/bootstrap.min.js') }}"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
     <script src="{{ asset('js/main.js') }}?v={{ random(999999) }}"></script>
 {% endblock %}
 </body>
