--- a/web/css/expenses.css
+++ b/web/css/expenses.css
@@ -183,10 +183,22 @@
     align-items: center;
 }
 
+@media (max-width: 768px)  {
+    .flex-left {
+        flex-direction: column;
+    }
+}
+
 .flex-left {
     display: flex;
     justify-content: left;
     align-items: center;
+}
+
+@media (max-width: 768px)  {
+    .flex-left > * {
+        padding-bottom: 12px;
+    }
 }
 
 .flex-left > * {
@@ -288,4 +300,10 @@
 
 .disableClick {
     cursor: default !important;
+}
+
+@media (max-width: 768px)  {
+    .alert-info > ul {
+        padding-left: 5px;
+    }
 }
