--- a/web/css/register.css
+++ b/web/css/register.css
@@ -2,28 +2,52 @@
     margin-top: 30px;
     display: flex;
     justify-content: space-between;
-    align-elements: center;
+    align-items: center;
 }
 
-.register-selector > div {
-    width: 45%;
-    margin: 0 20px;
+@media (max-width: 768px) {
+    .register-selector > div {
+        width: 100%;
+        margin: 0 20px;
+    }
+}
+
+@media (min-width: 768px) {
+    .register-selector > div {
+        width: 45%;
+        margin: 0 20px;
+    }
 }
 
 .register-selector > .split {
     margin: auto 0;
     background-color: white;
-    padding: 8px 0;
+    padding: 26px 8px;
 }
 
 .register-selector > .split::after {
     border-right: 1px solid #ddd;
     content: '';
-    width: 0px;
+    width: 0;
     height: 250px;
     position:  absolute;
     transform: translate(-10px,-50%) translateY(10px);
     z-index: -1;
+}
+
+@media (max-width: 768px)  {
+    .register-selector {
+        flex-direction: column-reverse;
+    }
+
+    .register-selector > .form {
+        width: 100%;
+        margin: 0;
+    }
+
+    .register-selector > .split::after {
+        transform: translate(-10px,-50%) translateY(10px) rotateZ(90deg);
+    }
 }
 
 .register-selector > .register-facebook {
@@ -31,6 +55,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+}
+
+.register-selector > .register-facebook > a:hover {
+    text-decoration: none;
+    color: white;
 }
 
 .register-selector > .register-facebook > * {
